--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,6 +10,7 @@
         <item>app.nicegram</item>
         <item>xyz.nextalone.nagram</item>
         <item>xyz.nextalone.nnngram</item>
+        <item>nu.gpu.nagram</item>
         <item>com.xtaolabs.pagergram</item>
         <item>org.telegram.messenger.web</item>
         <item>com.cool2645.nekolite</item>
